--- a/S_hpc/src/main/resources/application.properties
+++ b/S_hpc/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 vaadin.launch-browser=true
 spring.application.name=S_hpc
 server.port=8091
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
